# pandas-type-checks

./: .gitignore  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  pyproject.toml  requirements-checks.txt  requirements-docs.txt  requirements-optional.txt  requirements-test.txt  setup.py  sonar-project.properties  tox.ini
docs/: api.rst  conf.py  configuration.rst  example.rst  index.rst  installation.rst
src/pandas_type_checks/: __init__.py  core.py  decorator.py  errors.py  pandera_support.py  util.py
tests/: conftest.py  test_decorator.py  test_pandera_support.py  test_usage_examples.py
